--- a/.gitignore
+++ b/.gitignore
@@ -1,58 +1,34 @@
-# Directory structure files
-directory_structure.txt
-repository_structure.txt
-
-# OS generated files
+# === 기본 GitHub Pages용 ignore ===
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
-
-# IDE files
+node_modules/
+.env
 .vscode/
 .idea/
-*.swp
-*.swo
-
-# Logs
+__pycache__/
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+*.zip
+*.bak
+*.tmp
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
+# === Firebase 관련 ===
+firebase-debug.log
+.firebaserc
+.firebase/
+database.rules.json
+storage.rules
+firebase.json
 
-# Coverage directory used by tools like istanbul
-coverage/
+# === Local / 관리툴 임시파일 ===
+tools/*.csv
+tools/*.json
+tools/test/
+members/plans/*.zip
 
-# nyc test coverage
-.nyc_output
+# === 토큰/비밀키 ===
+*_token.txt
+token.json
+config_private.json
 
-# Dependency directories
-node_modules/
-
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# dotenv environment variables file
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# === OS / 편집기 ===
+desktop.ini
